# terrain

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  AI_CONTEXT.md  CLEAN_MACHINE_VALIDATION.md  Ideas.md  README.md  SMOKE_CHECKLIST.md  TAURI_MIGRATION_TASK_LIST.md  architecture-migration-task-list.md  build-tauri.ps1  index.html  reports-260421.md  styles.css  time-wire-task-list.md
assets/: npc.json
assets/Map 1/: clouds.json  fog.json  interaction.json  lighting.json  npc.json  pointlights.json  swarm.json  waterfx.json
assets/Map 2/: clouds.json  interaction.json  lighting.json  npc.json  parallax.json  swarm.json  waterfx.json
docs/: ARCHITECTURE.md
docs/old/: time-wire-task-list.md
docs/plans+setups/: CODE_SIGNING_PLAN.md  RELEASE_NOTES_TEMPLATE.md  SMOKE_CHECKLIST.md
docs/visual-baselines/: README.md
notes/: Unbenannt.canvas
src/: main.js  pointLightBakeWorker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: appShellLifecycleAssemblyRuntime.js  appShellLifecycleRuntime.js  bootstrapFeatureAssemblyRuntime.js  interactionFeatureAssemblyRuntime.js  interactionUiAssemblyRuntime.js  interactionUiSetupRuntime.js  (+13 more)
tests/: architectureOwnershipGuards.test.js  mainRuntimeStateBinding.test.js  mainRuntimeStateFacadeRuntime.test.js  modeCapabilities.test.js  movementStoreSyncRuntime.test.js  movementSystem.test.js  runtimeSyncFacadeRuntime.test.js  settingsRegistry.test.js  swarmRuntime.test.js  systemStoreSyncRuntime.test.js  timeRouter.test.js  weatherSystem.test.js
(+246 files in other folders)
